@@ -71,9 +71,9 @@ public class RealFile extends DLNAResource {
 	
 	private void manageFile(File f) {
 		if ((f.isFile() || f.isDirectory()) && !f.isHidden()) {
-			if (f.getName().toLowerCase().endsWith(".zip") || f.getName().toLowerCase().endsWith(".cbr") || f.getName().toLowerCase().endsWith(".jar")) {
+			if (PMS.configuration.isArchiveBrowsing() && (f.getName().toLowerCase().endsWith(".zip") || f.getName().toLowerCase().endsWith(".cbr") || f.getName().toLowerCase().endsWith(".jar"))) {
 				addChild(new ZippedFile(f));
-			} else if (f.getName().toLowerCase().endsWith(".rar")) {
+			} else if (PMS.configuration.isArchiveBrowsing() && f.getName().toLowerCase().endsWith(".rar")) {
 				addChild(new RarredFile(f));
 			} else if (f.getName().toLowerCase().endsWith(".iso") || (f.isDirectory() && f.getName().toUpperCase().equals("VIDEO_TS"))) {
 				addChild(new DVDISOFile(f));
